--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@
 
 # base ----------------------------------------
 matplotlib>=3.2.2
-# numpy>=1.18.5
-opencv-python>=4.1.2
+numpy==1.19.4
+# opencv-python>=4.1.2 # cmake compile
 # Pillow
 PyYAML>=5.3.1
 scipy>=1.4.1
