--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 # pip install -r requirements.txt
 
 # base ----------------------------------------
-matplotlib>=3.2.2
-numpy==1.19.4
-# opencv-python>=4.1.2 # cmake compile
+matplotlib==3.3.4
+numpy==1.15.4
+# opencv-python==4.5.3 # cmake compile
 # Pillow
 PyYAML>=5.3.1
-scipy>=1.4.1
+scipy==1.5.4
 # torch>=1.7.0
 # torchvision>=0.8.1
 tqdm>=4.41.0
