--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # pip install -r requirements.txt
 
 # base ----------------------------------------
-numpy~=1.15.0
+numpy==1.19.3
 matplotlib~=3.3.0
 # opencv-python==4.5.3 # cmake compile
 # Pillow
